--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "star-wars-social",
+  "name": "star-wars-social-thiago",
   "version": "0.0.2",
   "dependencies": {},
   "scripts": {
